Add Czech articles.

--- a/src/index.html
+++ b/src/index.html
@@ -419,55 +419,47 @@
             </div>
         </div>
     </div>
-    <!--<div class="articles-section">
+    <div class="articles-section">
         <h1 class="section-title">Articles</h1>
         <div class="articles-grid">
             <div class="article">
-                <h2 class="article-title">Article title</h2>
-                <p class="article-text">Article text article text article text article text article text article text article text article text article text article text text article text article text article text article text article text article text article text article text article text</p>
-                <a class="article-link" href="#">Read more</a>
+                <h2 class="article-title">Tým Charles4th na soutěži CanSat 2019 [CZ]</h2>
+                <p class="article-text">Ve dnech 25. a 26.4. jsme se zúčastnili národního finále soutěže CanSat 2019 v Plzni (letiště Erpužice a Centrum robotiky v Plzni). Soutěž měla dvě části. První probíhala na letišti v Erpužicích, kde probíhal test CanSatu (naší EVY). Druhá v Centru robotiky v Plzni. Přinášíme reportáž z celé akce.</p>
+                <a class="article-link" href="https://exospace.cz/tym-charles4th-na-soutezi-cansat-2019/">Read more</a>
                 <div class="logo-container">
-                    <img src="./images/trivox.jpg" class="article-logo" alt="logo">
+                    <img src="./images/sponsors/exospace.png" class="article-logo" alt="logo">
                 </div>
             </div>
             <div class="article">
-                <h2 class="article-title">Article title</h2>
-                <p class="article-text">Article text article text article text article text article text article text article text article text article text article text text article text article text article text article text article text article text article text article text article text</p>
-                <a class="article-link" href="#">Read more</a>
+                <h2 class="article-title">Národní finále CanSat 2019 zná své vítěze! [CZ]</h2>
+                <p class="article-text">V plzeňském Centru robotiky a na letišti v Erpužicích se 25. a 26. dubna 2019 utkalo 11 týmů z celé ČR za účelem postoupit do evropského finále soutěže CanSat, které se uskuteční v červnu v italské Bologni. Nejlépe se úkolu zhostili nováčci z týmu Charles the Fourth z Pardubic.</p>
+                <a class="article-link" href="https://exospace.cz/narodni-finale-cansat-2019-zna-sve-viteze/wppaspec/oc3/cv0/ab35/pt673">Read more</a>
                 <div class="logo-container">
-                    <img src="./images/trivox.jpg" class="article-logo" alt="logo">
+                    <img src="./images/sponsors/exospace.png" class="article-logo" alt="logo">
                 </div>
             </div>
             <div class="article">
-                <h2 class="article-title">Article title</h2>
-                <p class="article-text">Article text article text article text article text article text article text article text article text article text article text text article text article text article text article text article text article text article text article text article text</p>
-                <a class="article-link" href="#">Read more</a>
+                <h2 class="article-title">Národní finále soutěže CanSat [CZ]</h2>
+                <p class="article-text">Ve dnech 25. a 26.4. jsme se zúčastnili národního finále soutěže CanSat 2019 v Plzni (letiště Erpužice a Centrum robotiky v Plzni).</p>
+                <a class="article-link" href="http://www.spse.cz/clanek.php?i=644">Read more</a>
                 <div class="logo-container">
-                    <img src="./images/trivox.jpg" class="article-logo" alt="logo">
+                    <img src="./images/sponsors/spse.jpg" class="article-logo" alt="logo">
                 </div>
             </div>
             <div class="article">
-                <h2 class="article-title">Article title</h2>
-                <p class="article-text">Article text article text article text article text article text article text article text article text article text article text text article text article text article text article text article text article text article text article text article text</p>
-                <a class="article-link" href="#">Read more</a>
+                <h2 class="article-title">CanSat – první místo v národním semifinále [CZ]</h2>
+                <p class="article-text">Postupujeme na národní finále soutěže CanSat!</p>
+                <a class="article-link" href="http://www.spse.cz/clanek.php?id=619">Read more</a>
                 <div class="logo-container">
-                    <img src="./images/trivox.jpg" class="article-logo" alt="logo">
+                    <img src="./images/sponsors/spse.jpg" class="article-logo" alt="logo">
                 </div>
             </div>
             <div class="article hidden">
-                <h2 class="article-title">Article title</h2>
-                <p class="article-text">Article text article text article text article text article text article text article text article text article text article text text article text article text article text article text article text article text article text article text article text</p>
-                <a class="article-link" href="#">Read more</a>
+                <h2 class="article-title">Cansat – satelit v plechovce [CZ]</h2>
+                <p class="article-text">Naši žáci se účastní mezinárodní soutěže CanSat, kterou pořádá evropská vesmírná agentura ESA. Jejich cílem je vytvořit satelit o velikosti plechovky a monitorovat jeho přístání.</p>
+                <a class="article-link" href="http://www.spse.cz/clanek.php?id=612">Read more</a>
                 <div class="logo-container">
-                    <img src="./images/trivox.jpg" class="article-logo" alt="logo">
-                </div>
-            </div>
-            <div class="article hidden">
-                <h2 class="article-title">Article title</h2>
-                <p class="article-text">Article text article text article text article text article text article text article text article text article text article text text article text article text article text article text article text article text article text article text article text</p>
-                <a class="article-link" href="#">Read more</a>
-                <div class="logo-container">
-                    <img src="./images/trivox.jpg" class="article-logo" alt="logo">
+                    <img src="./images/sponsors/spse.jpg" class="article-logo" alt="logo">
                 </div>
             </div>
         </div>
@@ -476,7 +468,7 @@
                 More articles
             </button>
         </div>
-    </div>-->
+    </div>
     <div class="team-section">
         <h1 class="team-title">Team</h1>
         <div class="members-container">
