Redesign TOM section.

--- a/src/index.html
+++ b/src/index.html
@@ -35,13 +35,37 @@
             </a>
         </div>-->
     </div>
-    <div class="cansat-section" id="js-eva-section">
+    <div id="js-tom-section" class="tom-section slideshow-section">
+        <div class="title-container">
+            <h1 class="section-title">TOM</h1>
+        </div>
+        <div class="slideshow" id="js-eva-section">
+            <div class="js-image-1 image-container">
+                <img class="js-photo photo" src="./images/slideshow/base-and-probe.jpg" alt="Base and probe">
+            </div>
+            <div class="js-image-2 image-container hidden">
+                <img class="js-photo photo" src="./images/slideshow/complete-case.jpg" alt="Complete case">
+            </div>
+            <div class="js-image-3 image-container hidden">
+                <img class="js-photo photo" src="./images/slideshow/grey-case.jpg" alt="Grey case">
+            </div>
+        </div>
+        <div class="info-container">
+            <div class="text-background">
+                <p class="text">TOM (Technical Operation Machine) is our base station. He is connected to antenna and receives data which are sent by EVA. These data are display on TOM's display and also are sent via USB to connected computer.</p>
+            </div>
+            <button onclick="scrollDown()" class="arrow-down-button" id="js-arrow-down-button-tom">
+                <img src="./images/single-arrow-down.svg" alt="Arrow down" class="arrow-down">
+            </button>
+        </div>
+    </div>    
+    <div class="cansat-section">
         <h1 class="section-title">CanSat</h1>
         <div class="content">
             <p class="text">We are team of students participating in <a href="https://esero.sciencein.cz/cansat" class="link">CanSat</a> competition. Our goal is to make a satellite size of can. We're not alone, we also have two androids in our team - EVA and TOM.</p>
         </div>
     </div>   
-    <div class="cansat-section eva-section" id="js-eva-section">
+    <div class="cansat-section eva-section">
         <h1 class="section-title">EVA</h1>
         <div class="content">
             <img class="image" src="./images/eva.png" alt="EVA">
