Redesign CanSat section.

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <div class="header-section" id="js-header-section">
         <div class="gradient-container">
             <img src="./images/logo.png" alt="Our logo" class="logo" id="js-logo">
-            <button onclick="scrollDown('js-eva-section')" class="arrow-down-button" id="js-arrow-down-button">
+            <button onclick="scrollDown('js-cansat-section')" class="arrow-down-button" id="js-arrow-down-button">
                 <img src="./images/arrow-down.svg" alt="Arrow down" class="arrow-down">
             </button>
         </div>
@@ -34,6 +34,24 @@
                 <img src="images/flags/cz.png" alt="CZ" class="flag">
             </a>
         </div>-->
+    </div>
+    <div id="js-cansat-section" class="cansat-section slideshow-section">
+        <div class="title-container">
+            <h1 class="section-title">CanSat</h1>
+        </div>
+        <div class="slideshow">
+            <div class="js-image-1 image-container">
+                <img class="js-photo photo" src="./images/slideshow/team.jpg" alt="Team">
+            </div>
+        </div>
+        <div class="info-container">
+            <div class="text-background">
+                <p class="text">We are team of students participating in <a href="https://www.esa.int/Education/CanSat" class="link">CanSat</a> competition. Our goal is to make a satellite size of can. We're not alone, we also have two androids in our team - EVA and TOM.</p>
+            </div>
+            <button onclick="scrollDown('js-eva-section')" class="arrow-down-button" id="js-arrow-down-button-tom">
+                <img src="./images/single-arrow-down.svg" alt="Arrow down" class="arrow-down">
+            </button>
+        </div>
     </div>
     <div id="js-eva-section" class="eva-section slideshow-section">
         <div class="title-container">
@@ -86,13 +104,7 @@
             </button>
         </div>
     </div>
-    <div class="cansat-section">
-        <h1 class="section-title">CanSat</h1>
-        <div class="content">
-            <p class="text">We are team of students participating in <a href="https://esero.sciencein.cz/cansat" class="link">CanSat</a> competition. Our goal is to make a satellite size of can. We're not alone, we also have two androids in our team - EVA and TOM.</p>
-        </div>
-    </div>   
-    <div class="progress-section">
+    <div id="js-progress-section" class="progress-section">
         <h1 class="section-title">Progress of our mission</h1>
         <div class="progress-container">
             <div class="odd-progress-container">
@@ -438,7 +450,7 @@
             <div class="article">
                 <h2 class="article-title">Tým Charles4th na soutěži CanSat 2019 [CZ]</h2>
                 <p class="article-text">Ve dnech 25. a 26.4. jsme se zúčastnili národního finále soutěže CanSat 2019 v Plzni (letiště Erpužice a Centrum robotiky v Plzni). Soutěž měla dvě části. První probíhala na letišti v Erpužicích, kde probíhal test CanSatu (naší EVY). Druhá v Centru robotiky v Plzni. Přinášíme reportáž z celé akce.</p>
-                <a class="article-link" href="https://exospace.cz/tym-charles4th-na-soutezi-cansat-2019/">Read more</a>
+                <a class="article-link" href="https://exospace.cz/tym-charles4th-na-soutezi-cansat-2019/" target="_blank">Read more</a>
                 <div class="logo-container">
                     <img src="./images/sponsors/exospace.png" class="article-logo" alt="logo">
                 </div>
@@ -446,7 +458,7 @@
             <div class="article">
                 <h2 class="article-title">Národní finále CanSat 2019 zná své vítěze! [CZ]</h2>
                 <p class="article-text">V plzeňském Centru robotiky a na letišti v Erpužicích se 25. a 26. dubna 2019 utkalo 11 týmů z celé ČR za účelem postoupit do evropského finále soutěže CanSat, které se uskuteční v červnu v italské Bologni. Nejlépe se úkolu zhostili nováčci z týmu Charles the Fourth z Pardubic.</p>
-                <a class="article-link" href="https://exospace.cz/narodni-finale-cansat-2019-zna-sve-viteze/wppaspec/oc3/cv0/ab35/pt673">Read more</a>
+                <a class="article-link" href="https://exospace.cz/narodni-finale-cansat-2019-zna-sve-viteze/wppaspec/oc3/cv0/ab35/pt673" target="_blank">Read more</a>
                 <div class="logo-container">
                     <img src="./images/sponsors/exospace.png" class="article-logo" alt="logo">
                 </div>
@@ -454,7 +466,7 @@
             <div class="article">
                 <h2 class="article-title">Národní finále soutěže CanSat [CZ]</h2>
                 <p class="article-text">Ve dnech 25. a 26.4. jsme se zúčastnili národního finále soutěže CanSat 2019 v Plzni (letiště Erpužice a Centrum robotiky v Plzni).</p>
-                <a class="article-link" href="http://www.spse.cz/clanek.php?i=644">Read more</a>
+                <a class="article-link" href="http://www.spse.cz/clanek.php?i=644" target="_blank">Read more</a>
                 <div class="logo-container">
                     <img src="./images/sponsors/spse.jpg" class="article-logo" alt="logo">
                 </div>
@@ -462,7 +474,7 @@
             <div class="article">
                 <h2 class="article-title">CanSat – první místo v národním semifinále [CZ]</h2>
                 <p class="article-text">Postupujeme na národní finále soutěže CanSat!</p>
-                <a class="article-link" href="http://www.spse.cz/clanek.php?id=619">Read more</a>
+                <a class="article-link" href="http://www.spse.cz/clanek.php?id=619" target="_blank">Read more</a>
                 <div class="logo-container">
                     <img src="./images/sponsors/spse.jpg" class="article-logo" alt="logo">
                 </div>
@@ -470,7 +482,7 @@
             <div class="article hidden">
                 <h2 class="article-title">Cansat – satelit v plechovce [CZ]</h2>
                 <p class="article-text">Naši žáci se účastní mezinárodní soutěže CanSat, kterou pořádá evropská vesmírná agentura ESA. Jejich cílem je vytvořit satelit o velikosti plechovky a monitorovat jeho přístání.</p>
-                <a class="article-link" href="http://www.spse.cz/clanek.php?id=612">Read more</a>
+                <a class="article-link" href="http://www.spse.cz/clanek.php?id=612" target="_blank">Read more</a>
                 <div class="logo-container">
                     <img src="./images/sponsors/spse.jpg" class="article-logo" alt="logo">
                 </div>
