--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,8 @@
                 <p class="text">We are team of students participating in <a href="https://www.esa.int/Education/CanSat" class="link">CanSat</a> competition. Our goal is to make a satellite size of can. We're not alone, we also have two androids in our team - EVA and TOM.</p>
             </div>
             <button onclick="scrollDown('js-eva-section')" class="arrow-down-button" id="js-arrow-down-button-tom">
-                <img src="./images/single-arrow-down.svg" alt="Arrow down" class="arrow-down">
+                <img src="./images/single-arrow-down.svg" alt="Arrow down" class="arrow-down white">
+                <img src="./images/single-arrow-down-black.svg" alt="Arrow down" class="arrow-down black">
             </button>
         </div>
     </div>
@@ -76,7 +77,8 @@
                 <p class="text">EVA (Environmental Vocation Architecture) is our probe and core part of our mission. She will measure a lot of data during her fall.</p>
             </div>
             <button onclick="scrollDown('js-tom-section')" class="arrow-down-button" id="js-arrow-down-button-tom">
-                <img src="./images/single-arrow-down.svg" alt="Arrow down" class="arrow-down">
+                <img src="./images/single-arrow-down.svg" alt="Arrow down" class="arrow-down white">
+                <img src="./images/single-arrow-down-black.svg" alt="Arrow down" class="arrow-down black">
             </button>
         </div>
     </div>
@@ -100,7 +102,8 @@
                 <p class="text">TOM (Technical Operation Machine) is our base station. He is connected to antenna and receives data which are sent by EVA. These data are display on TOM's display and also are sent via USB to connected computer.</p>
             </div>
             <button onclick="scrollDown('js-progress-section')" class="arrow-down-button" id="js-arrow-down-button-tom">
-                <img src="./images/single-arrow-down.svg" alt="Arrow down" class="arrow-down">
+                <img src="./images/single-arrow-down.svg" alt="Arrow down" class="arrow-down white">
+                <img src="./images/single-arrow-down-black.svg" alt="Arrow down" class="arrow-down black">
             </button>
         </div>
     </div>
