Add LinuxExpress article.

--- a/src/index.html
+++ b/src/index.html
@@ -451,6 +451,14 @@
         <h1 class="section-title">Articles</h1>
         <div class="articles-grid">
             <div class="article">
+                <h2 class="article-title">Arduino na projektu CanSat [CZ]</h2>
+                <p class="article-text">Platforma Arduino má široké možnosti využití. Své uplatnění našla v soutěži CanSat, kterou každoročně organizuje Vzdělávací kancelář Evropské vesmírné agentury ESERO. Se svými zkušenostmi se s námi podělil Václav Pavlíček ze skupiny Charles 4th, která letos vyhrála české kolo soutěže.</p>
+                <a class="article-link" href="https://www.linuxexpres.cz/aktuality/arduino-na-projektu-cansat" target="_blank">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/sponsors/linuxexpress.jpg" class="article-logo" alt="logo">
+                </div>
+            </div>
+            <div class="article">
                 <h2 class="article-title">Tým Charles4th na soutěži CanSat 2019 [CZ]</h2>
                 <p class="article-text">Ve dnech 25. a 26.4. jsme se zúčastnili národního finále soutěže CanSat 2019 v Plzni (letiště Erpužice a Centrum robotiky v Plzni). Soutěž měla dvě části. První probíhala na letišti v Erpužicích, kde probíhal test CanSatu (naší EVY). Druhá v Centru robotiky v Plzni. Přinášíme reportáž z celé akce.</p>
                 <a class="article-link" href="https://exospace.cz/tym-charles4th-na-soutezi-cansat-2019/" target="_blank">Read more</a>
@@ -474,7 +482,7 @@
                     <img src="./images/sponsors/spse.jpg" class="article-logo" alt="logo">
                 </div>
             </div>
-            <div class="article">
+            <div class="article hidden">
                 <h2 class="article-title">CanSat – první místo v národním semifinále [CZ]</h2>
                 <p class="article-text">Postupujeme na národní finále soutěže CanSat!</p>
                 <a class="article-link" href="http://www.spse.cz/clanek.php?id=619" target="_blank">Read more</a>
