--- a/src/index.html
+++ b/src/index.html
@@ -689,6 +689,9 @@
             <a href="https://dcgi.fel.cvut.cz/" target="_blank" class="sponsor dcgi">
                 <img src="./images/sponsors/dcgi.png" class="logo" alt="DCGI">
             </a>
+            <a href="http://www.tcz.cz/" target="_blank" class="sponsor t-cz">
+                <img src="./images/sponsors/t-cz.png" class="logo" alt="T-CZ">
+            </a>
         </div>
         <p class="text">Would like to become our sponsor? Feel free to contact us at: <a href="mailto:info@charles4th.cz"
                 class="link">info@charles4th.cz</a>.</p>
