--- a/src/index.html
+++ b/src/index.html
@@ -692,6 +692,9 @@
             <a href="http://www.tcz.cz/" target="_blank" class="sponsor t-cz">
                 <img src="./images/sponsors/t-cz.png" class="logo" alt="T-CZ">
             </a>
+            <a href="https://www.sabaerospace.cz/" target="_blank" class="sponsor sab-aerospace">
+                <img src="./images/sponsors/SAB-Aerospace.png" class="logo" alt="S.A.B. Aerospace">
+            </a>
         </div>
         <p class="text">Would like to become our sponsor? Feel free to contact us at: <a href="mailto:info@charles4th.cz"
                 class="link">info@charles4th.cz</a>.</p>
