--- a/src/cz.html
+++ b/src/cz.html
@@ -329,6 +329,31 @@
                     </div>
                     <div class="dot"></div>
                 </div>
+                <div class="progress-item hide">
+                    <div class="content">
+                        <h2 class="item-title">Finalní kompletace<h2>
+                        <h3 class="item-date">16.6. 2019</h3>
+                        <p class="item-text">Úspěšně jsme sestavili další generaci satelitu EVA.</p>
+                    </div>
+                    <div class="dot"></div>
+                </div>
+                <div class="progress-item">
+                    <div class="content">
+                        <h2 class="item-title">Best Outreach Award<h2>
+                        <h3 class="item-date">24.–28.6. 2019</h3>
+                        <p class="item-text">Získali jsme na mezinárodní finále Best Outreach Award!</p>
+                        <a href="https://www.facebook.com/CharlesIVcansat/posts/695510054222352" target="_blank" class="item-link">Detail</a>
+                    </div>
+                    <div class="dot"></div>
+                </div>
+                <div class="progress-item hide">
+                    <div class="content">
+                        <h2 class="item-title">CanSat Final Report<h2>
+                        <h3 class="item-date">14.7. 2019</h3>
+                        <p class="item-text">Odeslali jsme porotě finální report.</p>
+                    </div>
+                    <div class="dot"></div>
+                </div>
             </div>
             <div class="even-progress-container">
                 <div class="progress-item hide">
@@ -548,6 +573,31 @@
                         <a href="https://www.facebook.com/CharlesIVcansat/posts/687161148390576" target="_blank" class="item-link">Detail</a>
                     </div>
                 </div>
+                <div class="progress-item">
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">Finalní kompletace<h2>
+                        <h3 class="item-date">16.6. 2019</h3>
+                        <p class="item-text">Úspěšně jsme sestavili další generaci satelitu EVA.</p>
+                    </div>
+                </div>
+                <div class="progress-item hide">
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">Best Outreach Award<h2>
+                        <h3 class="item-date">24.–28.6. 2019</h3>
+                        <p class="item-text">Získali jsme na mezinárodní finále Best Outreach Award!</p>
+                        <a href="https://www.facebook.com/CharlesIVcansat/posts/695510054222352" target="_blank" class="item-link">Detail</a>
+                    </div>
+                </div>
+                <div class="progress-item">
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">CanSat Final Report<h2>
+                        <h3 class="item-date">14.7. 2019</h3>
+                        <p class="item-text">Odeslali jsme porotě finální report.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -555,39 +605,95 @@
         <h1 class="section-title">Články</h1>
         <div class="articles-grid">
             <div class="article">
-                <h2 class="article-title">Arduino na projektu CanSat</h2>
+                <h2 class="article-title">Satelit velikosti plechovky od pardubických studentů bodoval v Itálii [CZ]</h2>
+                <p class="article-text">Studují střední školu, už teď si ale vyzkoušeli, co obnáší řešení vědeckého projektu. Šestičlenný tým, který si říká Charles 4th, má za sebou téměř rok usilovné práce zakončené účastí na finále soutěže CanSat v Itálii. Domů do Pardubic si přivezl jednu z hlavních cen.</p>
+                <a class="article-link" href="https://www.matfyz.cz/clanky/1378-satelit-velikosti-plechovky-od-pardubickych-studentu-bodoval-v-italii?fbclid=IwAR16RDnyCC7jF_G1Do17sHS69oPmX8P5FXrbrQKmB80rWqi7LijWFPKhj-Y" target="_blank">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/sponsors/matfyz.png" class="article-logo" alt="logo">
+                </div>
+            </div>
+            <div class="article">
+                <h2 class="article-title">CanSat 2019 [CZ]</h2>
+                <p class="article-text">Interview in TV.</p>
+                <a class="article-link" href="https://www.ceskatelevize.cz/ivysilani/1096902795-studio-6/219411010110711-studio-6-ii/obsah/707516-cansat-2019?fbclid=IwAR1r0fAKrAaRsrnAq4Fp95tgft_lJ7fS2Avz9U0lQAANtwwSJ1-CQ7E3xRE" target="_blank">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/sponsors/ct24.png" class="article-logo" alt="logo">
+                </div>
+            </div>
+            <div class="article">
+                <h2 class="article-title">Tým Charles 4th na evropském finále soutěže CanSat 2019 [CZ]</h2>
+                <p class="article-text">Přinášíme report z mezinárodního finále soutěže CanSat, kde tým Charles the Fourth reprezentoval Českou republiku a podařilo se mu vyhrát cenu za prezentaci a propagaci projektu. Průběh celého dne si můžete přečíst v následujícím příspěvku. Pro přehlednost jsou události rozděleny podle dní.</p>
+                <a class="article-link" href="https://exospace.cz/tym-charles4th-na-evropskem-finale-souteze-cansat-2019/" target="_blank">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/sponsors/exospace.png" class="article-logo" alt="logo">
+                </div>
+            </div>
+            <div class="article">
+                <h2 class="article-title">Satelit ‚v plechovce‘ má stopy ve Ždírci nad Doubravou [CZ]</h2>
+                <p class="article-text">Viděli jste někdy ‚družici‘ v plechovce od limonády? Na projektu s názvem CanSat se kromě jiných podílejí také dva studenti ze Ždírce nad Doubravou – Václav Pavlíček a Tomáš Forejt. S týmem Charles the Fourth a satelitním modulem EVA uspěli i v českém i evropském finále.</p>
+                <a class="article-link" href="https://www.youtube.com/watch?v=Bi232LbqjL8" target="_blank">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/sponsors/zdirec.png" class="article-logo" alt="logo">
+                </div>
+            </div>
+            <div class="article">
+                <h2 class="article-title">ŽIVĚ z Itálie: Český tým vyhrál evropské finále soutěže CanSat 2019 [CZ]</h2>
+                <p class="article-text">Historický úspěch v soutěži CanSat pro Českou republiku se podařil zajistit středoškolskému týmu z Pardubic, Charles the Fourth.</p>
+                <a class="article-link" href="https://www.youtube.com/watch?v=drw9AXx7Lf4" target="_blank">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/sponsors/cro.jpg" class="article-logo" alt="logo">
+                </div>
+            </div>            
+            <div class="article">
+                <h2 class="article-title">EVA míří do Boloně [CZ]</h2>
+                <p class="article-text">Družice EVA a základna TOM. To jsou dva klíčové komponenty, na kterých stojí projekt týmu Charles the Fourth. Šestice středoškoláků z Pardubic bude 24. – 28. června reprezentovat Českou republiku na finále soutěže CanSat v Itálii. Mezi nimi i Václav Pavlíček, který pro misi zajišťuje fungující software.</p>
+                <a class="article-link" href="https://www.matfyz.cz/clanky/1364-eva-miri-do-bolone" target="_blank">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/sponsors/matfyz.png" class="article-logo" alt="logo">
+                </div>
+            </div>
+            <div class="article hidden">
+                <h2 class="article-title">Arduino na projektu CanSat [CZ]</h2>
                 <p class="article-text">Platforma Arduino má široké možnosti využití. Své uplatnění našla v soutěži CanSat, kterou každoročně organizuje Vzdělávací kancelář Evropské vesmírné agentury ESERO. Se svými zkušenostmi se s námi podělil Václav Pavlíček ze skupiny Charles 4th, která letos vyhrála české kolo soutěže.</p>
                 <a class="article-link" href="https://www.linuxexpres.cz/aktuality/arduino-na-projektu-cansat" target="_blank">Read more</a>
                 <div class="logo-container">
                     <img src="./images/sponsors/linuxexpress.jpg" class="article-logo" alt="logo">
                 </div>
             </div>
-            <div class="article">
-                <h2 class="article-title">Tým Charles4th na soutěži CanSat 2019</h2>
+            <div class="article hidden">
+                <h2 class="article-title">Tým Charles4th na soutěži CanSat 2019 [CZ]</h2>
                 <p class="article-text">Ve dnech 25. a 26.4. jsme se zúčastnili národního finále soutěže CanSat 2019 v Plzni (letiště Erpužice a Centrum robotiky v Plzni). Soutěž měla dvě části. První probíhala na letišti v Erpužicích, kde probíhal test CanSatu (naší EVY). Druhá v Centru robotiky v Plzni. Přinášíme reportáž z celé akce.</p>
                 <a class="article-link" href="https://exospace.cz/tym-charles4th-na-soutezi-cansat-2019/" target="_blank">Read more</a>
                 <div class="logo-container">
                     <img src="./images/sponsors/exospace.png" class="article-logo" alt="logo">
                 </div>
             </div>
-            <div class="article">
-                <h2 class="article-title">Národní finále CanSat 2019 zná své vítěze!</h2>
+            <div class="article hidden">
+                <h2 class="article-title">Národní finále CanSat 2019 zná své vítěze! [CZ]</h2>
                 <p class="article-text">V plzeňském Centru robotiky a na letišti v Erpužicích se 25. a 26. dubna 2019 utkalo 11 týmů z celé ČR za účelem postoupit do evropského finále soutěže CanSat, které se uskuteční v červnu v italské Bologni. Nejlépe se úkolu zhostili nováčci z týmu Charles the Fourth z Pardubic.</p>
                 <a class="article-link" href="https://exospace.cz/narodni-finale-cansat-2019-zna-sve-viteze/wppaspec/oc3/cv0/ab35/pt673" target="_blank">Read more</a>
                 <div class="logo-container">
                     <img src="./images/sponsors/exospace.png" class="article-logo" alt="logo">
                 </div>
             </div>
-            <div class="article">
-                <h2 class="article-title">Národní finále soutěže CanSat</h2>
+            <div class="article hidden">
+                <h2 class="article-title">Národní finále soutěže CanSat [CZ]</h2>
                 <p class="article-text">Ve dnech 25. a 26.4. jsme se zúčastnili národního finále soutěže CanSat 2019 v Plzni (letiště Erpužice a Centrum robotiky v Plzni).</p>
                 <a class="article-link" href="http://www.spse.cz/clanek.php?i=644" target="_blank">Read more</a>
                 <div class="logo-container">
                     <img src="./images/sponsors/spse.jpg" class="article-logo" alt="logo">
                 </div>
+            </div>            
+            <div class="article hidden">
+                <h2 class="article-title">Známe postupující týmy do národního finále soutěže CanSat 2019! [CZ]</h2>
+                <p class="article-text">Dnes se v pražské kanceláři odehrálo netrpělivě očekáváne národní semifinále středoškolské soutěže CanSat.</p>
+                <a class="article-link" href="https://esero.sciencein.cz/articles/view/152-zname-postupujici-tymy-do-narodniho-finale-souteze-cansat-2019" target="_blank">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/sponsors/esero.jpg" class="article-logo" alt="logo">
+                </div>
             </div>
             <div class="article hidden">
-                <h2 class="article-title">CanSat – první místo v národním semifinále</h2>
+                <h2 class="article-title">CanSat – první místo v národním semifinále [CZ]</h2>
                 <p class="article-text">Postupujeme na národní finále soutěže CanSat!</p>
                 <a class="article-link" href="http://www.spse.cz/clanek.php?id=619" target="_blank">Read more</a>
                 <div class="logo-container">
@@ -595,7 +701,7 @@
                 </div>
             </div>
             <div class="article hidden">
-                <h2 class="article-title">Cansat – satelit v plechovce</h2>
+                <h2 class="article-title">Cansat – satelit v plechovce [CZ]</h2>
                 <p class="article-text">Naši žáci se účastní mezinárodní soutěže CanSat, kterou pořádá evropská vesmírná agentura ESA. Jejich cílem je vytvořit satelit o velikosti plechovky a monitorovat jeho přístání.</p>
                 <a class="article-link" href="http://www.spse.cz/clanek.php?id=612" target="_blank">Read more</a>
                 <div class="logo-container">
