--- a/src/index.html
+++ b/src/index.html
@@ -329,6 +329,31 @@
                     </div>
                     <div class="dot"></div>
                 </div>
+                <div class="progress-item hide">
+                    <div class="content">
+                        <h2 class="item-title">Final completation<h2>
+                        <h3 class="item-date">16th June 2019</h3>
+                        <p class="item-text">We successfully completed our next generation of EVA.</p>
+                    </div>
+                    <div class="dot"></div>
+                </div>
+                <div class="progress-item">
+                    <div class="content">
+                        <h2 class="item-title">Best Outreach Award<h2>
+                        <h3 class="item-date">24th–28th June 2019</h3>
+                        <p class="item-text">We won the Best Outreach Award in international finals.</p>
+                        <a href="https://www.facebook.com/CharlesIVcansat/posts/695510054222352" target="_blank" class="item-link">Detail</a>
+                    </div>
+                    <div class="dot"></div>
+                </div>
+                <div class="progress-item hide">
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">CanSat Final Report<h2>
+                        <h3 class="item-date">14th July 2019</h3>
+                        <p class="item-text">We submitted our final report to the jury.</p>
+                    </div>
+                </div>
             </div>
             <div class="even-progress-container">
                 <div class="progress-item hide">
@@ -548,13 +573,86 @@
                         <a href="https://www.facebook.com/CharlesIVcansat/posts/687161148390576" target="_blank" class="item-link">Detail</a>
                     </div>
                 </div>
+                <div class="progress-item">
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">Final completation<h2>
+                        <h3 class="item-date">16th June 2019</h3>
+                        <p class="item-text">We successfully completed our next generation of EVA.</p>
+                    </div>
+                </div>
+                <div class="progress-item hide">
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">Best Outreach Award<h2>
+                        <h3 class="item-date">24th–28th June 2019</h3>
+                        <p class="item-text">We won the Best Outreach Award in international finals.</p>
+                        <a href="https://www.facebook.com/CharlesIVcansat/posts/695510054222352" target="_blank" class="item-link">Detail</a>
+                    </div>
+                </div>
+                <div class="progress-item">
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">CanSat Final Report<h2>
+                        <h3 class="item-date">14th July 2019</h3>
+                        <p class="item-text">We submitted our final report to the jury.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <div class="articles-section">
-        <h1 class="section-title">Articles</h1>
+        <h1 class="section-title">Articles and interviews</h1>
         <div class="articles-grid">
             <div class="article">
+                <h2 class="article-title">Satelit velikosti plechovky od pardubických studentů bodoval v Itálii [CZ]</h2>
+                <p class="article-text">Studují střední školu, už teď si ale vyzkoušeli, co obnáší řešení vědeckého projektu. Šestičlenný tým, který si říká Charles 4th, má za sebou téměř rok usilovné práce zakončené účastí na finále soutěže CanSat v Itálii. Domů do Pardubic si přivezl jednu z hlavních cen.</p>
+                <a class="article-link" href="https://www.matfyz.cz/clanky/1378-satelit-velikosti-plechovky-od-pardubickych-studentu-bodoval-v-italii?fbclid=IwAR16RDnyCC7jF_G1Do17sHS69oPmX8P5FXrbrQKmB80rWqi7LijWFPKhj-Y" target="_blank">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/sponsors/matfyz.png" class="article-logo" alt="logo">
+                </div>
+            </div>
+            <div class="article">
+                <h2 class="article-title">CanSat 2019 [CZ]</h2>
+                <p class="article-text">Interview in TV.</p>
+                <a class="article-link" href="https://www.ceskatelevize.cz/ivysilani/1096902795-studio-6/219411010110711-studio-6-ii/obsah/707516-cansat-2019?fbclid=IwAR1r0fAKrAaRsrnAq4Fp95tgft_lJ7fS2Avz9U0lQAANtwwSJ1-CQ7E3xRE" target="_blank">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/sponsors/ct24.png" class="article-logo" alt="logo">
+                </div>
+            </div>
+            <div class="article">
+                <h2 class="article-title">Tým Charles 4th na evropském finále soutěže CanSat 2019 [CZ]</h2>
+                <p class="article-text">Přinášíme report z mezinárodního finále soutěže CanSat, kde tým Charles the Fourth reprezentoval Českou republiku a podařilo se mu vyhrát cenu za prezentaci a propagaci projektu. Průběh celého dne si můžete přečíst v následujícím příspěvku. Pro přehlednost jsou události rozděleny podle dní.</p>
+                <a class="article-link" href="https://exospace.cz/tym-charles4th-na-evropskem-finale-souteze-cansat-2019/" target="_blank">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/sponsors/exospace.png" class="article-logo" alt="logo">
+                </div>
+            </div>
+            <div class="article">
+                <h2 class="article-title">Satelit ‚v plechovce‘ má stopy ve Ždírci nad Doubravou [CZ]</h2>
+                <p class="article-text">Viděli jste někdy ‚družici‘ v plechovce od limonády? Na projektu s názvem CanSat se kromě jiných podílejí také dva studenti ze Ždírce nad Doubravou – Václav Pavlíček a Tomáš Forejt. S týmem Charles the Fourth a satelitním modulem EVA uspěli i v českém i evropském finále.</p>
+                <a class="article-link" href="https://www.youtube.com/watch?v=Bi232LbqjL8" target="_blank">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/sponsors/zdirec.png" class="article-logo" alt="logo">
+                </div>
+            </div>
+            <div class="article">
+                <h2 class="article-title">ŽIVĚ z Itálie: Český tým vyhrál evropské finále soutěže CanSat 2019 [CZ]</h2>
+                <p class="article-text">Historický úspěch v soutěži CanSat pro Českou republiku se podařil zajistit středoškolskému týmu z Pardubic, Charles the Fourth.</p>
+                <a class="article-link" href="https://www.youtube.com/watch?v=drw9AXx7Lf4" target="_blank">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/sponsors/cro.jpg" class="article-logo" alt="logo">
+                </div>
+            </div>            
+            <div class="article">
+                <h2 class="article-title">EVA míří do Boloně [CZ]</h2>
+                <p class="article-text">Družice EVA a základna TOM. To jsou dva klíčové komponenty, na kterých stojí projekt týmu Charles the Fourth. Šestice středoškoláků z Pardubic bude 24. – 28. června reprezentovat Českou republiku na finále soutěže CanSat v Itálii. Mezi nimi i Václav Pavlíček, který pro misi zajišťuje fungující software.</p>
+                <a class="article-link" href="https://www.matfyz.cz/clanky/1364-eva-miri-do-bolone" target="_blank">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/sponsors/matfyz.png" class="article-logo" alt="logo">
+                </div>
+            </div>
+            <div class="article hidden">
                 <h2 class="article-title">Arduino na projektu CanSat [CZ]</h2>
                 <p class="article-text">Platforma Arduino má široké možnosti využití. Své uplatnění našla v soutěži CanSat, kterou každoročně organizuje Vzdělávací kancelář Evropské vesmírné agentury ESERO. Se svými zkušenostmi se s námi podělil Václav Pavlíček ze skupiny Charles 4th, která letos vyhrála české kolo soutěže.</p>
                 <a class="article-link" href="https://www.linuxexpres.cz/aktuality/arduino-na-projektu-cansat" target="_blank">Read more</a>
@@ -562,7 +660,7 @@
                     <img src="./images/sponsors/linuxexpress.jpg" class="article-logo" alt="logo">
                 </div>
             </div>
-            <div class="article">
+            <div class="article hidden">
                 <h2 class="article-title">Tým Charles4th na soutěži CanSat 2019 [CZ]</h2>
                 <p class="article-text">Ve dnech 25. a 26.4. jsme se zúčastnili národního finále soutěže CanSat 2019 v Plzni (letiště Erpužice a Centrum robotiky v Plzni). Soutěž měla dvě části. První probíhala na letišti v Erpužicích, kde probíhal test CanSatu (naší EVY). Druhá v Centru robotiky v Plzni. Přinášíme reportáž z celé akce.</p>
                 <a class="article-link" href="https://exospace.cz/tym-charles4th-na-soutezi-cansat-2019/" target="_blank">Read more</a>
@@ -570,7 +668,7 @@
                     <img src="./images/sponsors/exospace.png" class="article-logo" alt="logo">
                 </div>
             </div>
-            <div class="article">
+            <div class="article hidden">
                 <h2 class="article-title">Národní finále CanSat 2019 zná své vítěze! [CZ]</h2>
                 <p class="article-text">V plzeňském Centru robotiky a na letišti v Erpužicích se 25. a 26. dubna 2019 utkalo 11 týmů z celé ČR za účelem postoupit do evropského finále soutěže CanSat, které se uskuteční v červnu v italské Bologni. Nejlépe se úkolu zhostili nováčci z týmu Charles the Fourth z Pardubic.</p>
                 <a class="article-link" href="https://exospace.cz/narodni-finale-cansat-2019-zna-sve-viteze/wppaspec/oc3/cv0/ab35/pt673" target="_blank">Read more</a>
@@ -578,12 +676,20 @@
                     <img src="./images/sponsors/exospace.png" class="article-logo" alt="logo">
                 </div>
             </div>
-            <div class="article">
+            <div class="article hidden">
                 <h2 class="article-title">Národní finále soutěže CanSat [CZ]</h2>
                 <p class="article-text">Ve dnech 25. a 26.4. jsme se zúčastnili národního finále soutěže CanSat 2019 v Plzni (letiště Erpužice a Centrum robotiky v Plzni).</p>
                 <a class="article-link" href="http://www.spse.cz/clanek.php?i=644" target="_blank">Read more</a>
                 <div class="logo-container">
                     <img src="./images/sponsors/spse.jpg" class="article-logo" alt="logo">
+                </div>
+            </div>            
+            <div class="article hidden">
+                <h2 class="article-title">Známe postupující týmy do národního finále soutěže CanSat 2019! [CZ]</h2>
+                <p class="article-text">Dnes se v pražské kanceláři odehrálo netrpělivě očekáváne národní semifinále středoškolské soutěže CanSat.</p>
+                <a class="article-link" href="https://esero.sciencein.cz/articles/view/152-zname-postupujici-tymy-do-narodniho-finale-souteze-cansat-2019" target="_blank">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/sponsors/esero.jpg" class="article-logo" alt="logo">
                 </div>
             </div>
             <div class="article hidden">
@@ -717,5 +823,4 @@
         </div>
     </div>
 </body>
-
 </html>
